# performance

./: .gitignore  LICENSE  README.markdown  clearAll.sh  plotResults.py  results.py  runMe.sh  showAll.sh
C/: io.c  run.sh
C#/: IOTest.cs  run.sh
C++/: io.cpp  run.sh  runClang.sh
Haskell/: Main.hs  io.cabal  io.hs  run.sh
Julia/: io.jl  run.sh
Kotlin/: generation.kt
Pypy/: io.py  run.sh
Python/: io.py  run.sh
R/: io.R  run.sh
Rust/: Cargo.toml  run.sh
Rust/src/: main.rs
