name:                io
version:             0.1.0.0
author:              Evgeny Nerush
maintainer:           
build-type:          Simple
cabal-version:       >=1.10

executable io
  main-is:             Main.hs
  other-extensions:    BangPatterns
  build-depends:       base >=4.9 && <4.10
                     , vector >=0.11 && <0.12
                     , clock >=0.7 && <0.8
                     , formatting >= 6.2 && <6.3
                     , bytestring >=0.10 && <0.11
                     , store >=0.3 && <0.4
                     , deepseq >=1.4 && <1.5
  default-language:    Haskell2010
